# ccsp-moca

./: CONTRIBUTING.md  Makefile.am  NOTICE  cmpnt_build_custom_pre_arm.mk  cmpnt_build_custom_pre_pc.mk  configure.ac
config/: CcspMoCA.cfg  CcspMoCADM.cfg  TR181-MoCA.XML
scripts/: MoCA_isolation.sh
source/: Makefile.am
source-arm/TR-181/board_sbapi/: Makefile.am
source-mips/: Makefile.am
source-mips/TR-181/: Makefile.am
source-mips/TR-181/board_sbapi/: Makefile.am
source-pc/TR-181/board_sbapi/: Makefile.am
source/MRD/: Makefile.am  mrd.c
source/MoCASsp/: Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c
source/TR-181/: Makefile.am
source/TR-181/board_sbapi/: Makefile.am  cosa_moca_apis.c  cosa_moca_webconfig_api.c
source/TR-181/include/: ccsp_mocaLog_wrapper.h  cosa_moca_apis.h
source/TR-181/middle_layer_src/: Makefile.am  cosa_apis.h  cosa_dml_api_common.h  cosa_moca_dml.c  cosa_moca_dml.h  cosa_moca_internal.c  cosa_moca_internal.h  cosa_moca_network_info.c  cosa_moca_network_info.h  dml_tr181_custom_cfg.h  dml_tr181_custom_cfg_custom.h  plugin_main.c  plugin_main.h  plugin_main_apis.h
source/test/: Makefile.am  gtest_main.cpp
